--- a/cubrid-database@.service
+++ b/cubrid-database@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Cubrid database
+Description=cubrid database
 After=network.target
 
 [Service]
@@ -9,7 +9,6 @@ User=cubrid
 Group=cubrid
 
 Environment=CUBRID=/opt/cubrid CUBRID_DATABASES=/var/lib/cubrid/databases
-WorkingDirectory=/opt/cubrid
 ExecStart=/opt/cubrid/bin/cubrid server start %I
 ExecReload=/opt/cubrid/bin/cubrid server restart %I
 ExecStop=/opt/cubrid/bin/cubrid server stop %I
