--- a/cubrid.service
+++ b/cubrid.service
@@ -10,6 +10,7 @@ Group=cubrid
 
 Environment=CUBRID=/opt/cubrid CUBRID_DATABASES=/var/lib/cubrid/databases
 ExecStart=/opt/cubrid/bin/cubrid service start
+ExecStartPost=/usr/bin/chmod g+w /tmp/CUBRID1523
 ExecStop=/opt/cubrid/bin/cubrid service stop
 
 [Install]
